fix: alignment issues with credits card component

--- a/frontend/src/pages/HomeScreen/home.module.css
+++ b/frontend/src/pages/HomeScreen/home.module.css
@@ -21,3 +21,21 @@
     grid-template-rows: auto auto auto;
     padding: 10px;
 }
+
+.row{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.fullsize-tab{
+    width: min(max(800px, 50%), 100%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #efefef;
+}
+
+.card-width{
+    width: 100%
+}
